# genderphoto

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: quickstart.ipynb
src/genderphoto/: __init__.py  batch.py  constants.py  ensemble.py  face_classifier.py  name_classifier.py  photo_search.py  pipeline.py  utils.py  vlm_classifier.py
tests/: test_ensemble.py  test_name_classifier.py  test_validation_100.py
